@@ -8,6 +8,9 @@
 # 	autoconf (optional - used by munin-config)
 #
 # $Log$
+# Revision 1.3  2004/05/20 13:57:12  jimmyo
+# Set categories to some of the plugins.
+#
 # Revision 1.2  2004/05/18 22:04:30  jimmyo
 # Use "sed 1d" instead of "tail +2" in df plugins (patch by Olivier Delhomme).
 #
@@ -40,6 +43,7 @@ if [ "$1" = "config" ]; then
 	echo 'graph_title Filesystem usage (in %)'
 	echo 'graph_args --upper-limit 100 -l 0'
 	echo 'graph_vlabel %'
+	echo 'graph_category disk'
 	df -P -l -x none | sed 1d | grep -v "//" | while read i; do
 		name=`echo $i | sed 's/[\/.-]/_/g'| awk '{ print $1 }'`
 		echo -n "$name.label "
