@@ -8,6 +8,9 @@
 # 	autoconf (optional - used by munin-config)
 #
 # $Log$
+# Revision 1.4  2004/05/20 13:57:12  jimmyo
+# Set categories to some of the plugins.
+#
 # Revision 1.3  2004/05/18 22:04:30  jimmyo
 # Use "sed 1d" instead of "tail +2" in df plugins (patch by Olivier Delhomme).
 #
@@ -61,6 +64,7 @@ if [ "$1" = "config" ]; then
 	echo 'graph_title Inode usage (in %)'
 	echo 'graph_args --upper-limit 100 -l 0'
 	echo 'graph_vlabel %'
+	echo 'graph_category disk'
 	df -P -l -i  -x none| sed 1d | grep -v "//" | awk '$5 ~ /[0-9]%/ {print}' | while read i; do
 		if [ "`fs $i`" = "reiserfs" ] ; then continue ; fi
 		name=`echo $i | sed 's/[\/.]/_/g'| awk '{ print $1 }'`
