@@ -3,6 +3,9 @@
 # Plugin to monitor the number of open files in the system.
 #
 # $Log$
+# Revision 1.2  2004/05/20 13:57:12  jimmyo
+# Set categories to some of the plugins.
+#
 # Revision 1.1  2004/01/02 18:50:01  jimmyo
 # Renamed occurrances of lrrd -> munin
 #
@@ -45,6 +48,7 @@ if [ "$1" = "config" ]; then
 	echo 'graph_title slapd open files usage'
 	echo 'graph_args --base 1000 -l 0'
 	echo 'graph_vlabel number of files'
+	echo 'graph_category system'
 	echo 'cnt.label Slapd proc count'
 	echo 'avg.label avg all slapd proc'
 	echo 'max.label max slapd files'
