@@ -12,6 +12,9 @@
 # be monitored with this plugin.
 #
 # $Log$
+# Revision 1.2  2004/05/20 13:57:12  jimmyo
+# Set categories to some of the plugins.
+#
 # Revision 1.1  2004/01/02 18:50:01  jimmyo
 # Renamed occurrances of lrrd -> munin
 #
@@ -60,6 +63,7 @@ if [ "$1" = "config" ]; then
 	echo "graph_title $INTERFACE traffic"
 	echo 'graph_args --base 1000'
 	echo 'graph_vlabel bps in (-) / out (+)'
+	echo 'graph_category network'
 	echo 'down.label received'
         echo 'down.type COUNTER'
         echo 'down.graph no'
