@@ -7,6 +7,9 @@
 # Usage: Link or copy into /etc/munin/node.d/
 #
 # $Log$
+# Revision 1.2  2004/05/20 13:57:12  jimmyo
+# Set categories to some of the plugins.
+#
 # Revision 1.1  2004/01/02 18:50:01  jimmyo
 # Renamed occurrances of lrrd -> munin
 #
@@ -47,6 +50,8 @@ if [ "$1" = "config" ]; then
 	echo 'graph_args --base 1000 -l 0'
 	# The Y-axis label
 	echo 'graph_vlabel interrupts & ctx switches / second'
+	# Graph category
+	echo 'graph_category system'
 	# The fields. "label" is used in the legend. "label" is the only
 	# required subfield. 
 	echo 'intr.label interrupts'
