@@ -11,6 +11,9 @@
 #       autoconf (optional - used by munin-config)
 #
 # $Log$
+# Revision 1.3  2004/05/20 13:57:12  jimmyo
+# Set categories to some of the plugins.
+#
 # Revision 1.2  2004/05/15 21:33:29  jimmyo
 # "Upped" som plugins from contrib/manual to manual or auto.
 #
@@ -124,6 +127,7 @@ sub print_config {
 
     print("graph_title IO Service time\n",
           "graph_args --base 1000\n",
+          "graph_category disk\n",
           "graph_vlabel ms\n");
 
     for my $d ( @{ get_ios(1) } ) {
