@@ -17,6 +17,9 @@
 # This plugin is based on the if_ plugin.
 #
 #$Log$
+#Revision 1.2  2004/05/20 13:57:12  jimmyo
+#Set categories to some of the plugins.
+#
 #Revision 1.1  2004/05/16 16:28:40  jimmyo
 #Linux/ip_ wildcard plugin contributed by Mathy Vanvoorden (SF#954851).
 #
@@ -55,6 +58,7 @@ if [ "$1" = "config" ]; then
         echo "graph_title $IP traffic"
         echo 'graph_args --base 1000'
         echo 'graph_vlabel $IP traffic'
+		echo 'graph_category network'
         echo 'out.label sent (bps)'
         echo 'out.type COUNTER'
         echo 'out.cdef out,8,*'
