@@ -5,6 +5,9 @@
 # Usage: Link or copy into /etc/munin/node.d/
 #
 # $Log$
+# Revision 1.4  2004/05/20 13:57:12  jimmyo
+# Set categories to some of the plugins.
+#
 # Revision 1.3  2004/05/16 12:41:04  jimmyo
 # Changed load plot from lastminute to last 5 minutes.
 #
@@ -60,6 +63,8 @@ if [ "$1" = "config" ]; then
 	# We want Cur/Min/Avg/Max unscaled (i.e. 0.42 load instead of
 	# 420 milliload)
 	echo 'graph_scale no'
+	# Graph category
+	echo 'graph_category system'
 	# The fields. "label" is used in the legend. "label" is the only
 	# required subfield. 
 	echo 'load.label load'
