@@ -12,6 +12,9 @@
 # 	autoconf (optional - only used by munin-config)
 #
 # $Log$
+# Revision 1.2  2004/05/20 13:57:12  jimmyo
+# Set categories to some of the plugins.
+#
 # Revision 1.1  2004/01/02 18:50:01  jimmyo
 # Renamed occurrances of lrrd -> munin
 #
@@ -51,6 +54,7 @@ if ($ARGV[0] and $ARGV[0] eq "config")
 {
 	print "graph_args --base 1024 -l 0 --vertical-label Bytes --upper-limit ", $mems{'MemTotal'}, "\n";
 	print "graph_title Memory usage\n";
+	print "graph_category system\n";
 	print "graph_order ",
 		"apps ";
 		if (exists $mems{'PageTables'})
