@@ -8,6 +8,9 @@
 # 	autoconf (optional - used by munin-config)
 #
 # $Log$
+# Revision 1.2  2004/05/20 13:57:12  jimmyo
+# Set categories to some of the plugins.
+#
 # Revision 1.1  2004/01/02 18:50:01  jimmyo
 # Renamed occurrances of lrrd -> munin
 #
@@ -42,6 +45,7 @@ if [ "$1" = "config" ]; then
 	echo 'graph_title File table usage'
 	echo 'graph_args --base 1000 -l 0'
 	echo 'graph_vlabel number of open files'
+	echo 'graph_category system'
 	echo 'used.label open files'
 	echo 'max.label max open files'
 	awk  '{printf "used.warning %d\nused.critical %d\n",$3*0.92,$3*0.98}' < /proc/sys/fs/file-nr
