@@ -15,6 +15,9 @@
 # 	suggest  (optional - used by munin-config)
 #
 # $Log$
+# Revision 1.2  2004/05/20 13:57:12  jimmyo
+# Set categories to some of the plugins.
+#
 # Revision 1.1  2004/01/02 18:50:01  jimmyo
 # Renamed occurrances of lrrd -> munin
 #
@@ -133,6 +136,7 @@ if ($ARGV[0] and $ARGV[0] =~ /^\s*config\s*$/i)
 	}
 	print "graph_args --base 1000 -l 0\n";
 	print "graph_vlabel concurrent connections\n";
+	print "graph_category network\n";
 	print "count.label $name\n";
 	exit 0;
 }
