@@ -9,6 +9,9 @@
 # 	autoconf (optional - used by munin-config)
 #
 # $Log$
+# Revision 1.2  2004/05/20 13:57:12  jimmyo
+# Set categories to some of the plugins.
+#
 # Revision 1.1  2004/01/02 18:50:01  jimmyo
 # Renamed occurrances of lrrd -> munin
 #
@@ -37,6 +40,7 @@ if [ "$1" = "config" ]; then
 	echo 'graph_title Number of Processes'
 	echo 'graph_args --base 1000 -l 0 '
 	echo 'graph_vlabel number of processes'
+	echo 'graph_category processes'
 	echo 'processes.label processes'
 	echo 'processes.draw LINE2'
 	exit 0
