@@ -8,6 +8,9 @@
 # 	autoconf (optional - used by munin-config)
 #
 # $Log$
+# Revision 1.2  2004/05/20 13:57:12  jimmyo
+# Set categories to some of the plugins.
+#
 # Revision 1.1  2004/01/02 18:50:01  jimmyo
 # Renamed occurrances of lrrd -> munin
 #
@@ -44,6 +47,7 @@ if [ "$1" = "config" ]; then
 	echo 'graph_title Swap in/out'
 	echo 'graph_args -l 0 --base 1000'
 	echo 'graph_vlabel pages per second in (-) / out (+)'
+	echo 'graph_category system'
 	echo 'swap_in.label swap'
 	echo 'swap_in.type COUNTER'
 	echo 'swap_in.max 100000'
