@@ -23,6 +23,9 @@
 # 	url      - Override default status-url
 #
 # $Log$
+# Revision 1.7  2004/05/20 13:57:11  jimmyo
+# Set categories to some of the plugins.
+#
 # Revision 1.6  2004/05/14 21:16:46  jimmyo
 # "Upped" som plugins from contrib/manual to auto.
 #
@@ -100,6 +103,7 @@ if ( exists $ARGV[0] and $ARGV[0] eq "config" )
 {
         print "graph_title Apache processes\n";
         print "graph_args --base 1000\n";
+		print "graph_category apache\n";
 	print "graph_order ";
 	foreach my $port (@PORTS) {
 	    print "busy$port idle$port ";
