@@ -17,6 +17,9 @@
 # 	queuecrit    - When to crit
 #
 # $Log$
+# Revision 1.3  2004/05/20 13:57:12  jimmyo
+# Set categories to some of the plugins.
+#
 # Revision 1.2  2004/01/29 19:39:00  jimmyo
 # Generic plugins now use printf instead of echo -n, as this is more portable (SF#885564)
 #
@@ -85,6 +88,7 @@ if [ "$1" = "config" ]; then
 	echo 'graph_title Exim Mailqueue'
 	echo 'graph_args --base 1000 -l 0'
 	echo 'graph_vlabel mails in queue'
+	echo 'graph_category exim'
 	echo 'mails.label mails'
 	echo 'mails.draw AREA'
 	echo "mails.warning $QUEUEWARN"
