@@ -15,6 +15,9 @@
 # 	exim         - Where's exim?
 #
 # $Log$
+# Revision 1.2  2004/05/20 13:57:12  jimmyo
+# Set categories to some of the plugins.
+#
 # Revision 1.1  2004/01/02 18:50:00  jimmyo
 # Renamed occurrances of lrrd -> munin
 #
@@ -126,6 +129,7 @@ if ( $ARGV[0] and $ARGV[0] eq "config" )
     print "graph_args --base 1000 -l 0\n";
     print "graph_vlabel mails/min\n";
     print "graph_scale  no\n";
+	print "graph_category exim\n";
     print "received.label received\n";
     print "received.type COUNTER\n";
     print "received.draw AREA\n";
