@@ -12,6 +12,9 @@
 #   mysqlopts    - Options to pass to mysql
 #
 # $Log$
+# Revision 1.3  2004/05/20 13:57:12  jimmyo
+# Set categories to some of the plugins.
+#
 # Revision 1.2  2004/04/27 18:58:53  jimmyo
 # Fixed bug in mysql-plugins (Deb#233762).
 #
@@ -57,6 +60,7 @@ if [ "$1" = "config" ]; then
 	echo 'graph_title MySQL throughput'
 	echo 'graph_args --base 1024'
 	echo 'graph_vlabel bytes received (-) / sent (+)'
+	echo 'graph_category mysql'
 	echo 'recv.label received'
 	echo 'recv.type COUNTER'
 	echo 'recv.draw LINE2'
