@@ -16,6 +16,9 @@
 #	ignore       - Tables to ignore. Regex.
 #
 # $Log$
+# Revision 1.2  2004/05/20 13:57:12  jimmyo
+# Set categories to some of the plugins.
+#
 # Revision 1.1  2004/01/02 18:50:00  jimmyo
 # Renamed occurrances of lrrd -> munin
 #
@@ -74,6 +77,7 @@ sub print_config
 	print "graph_title MySQL \"$DB\" isam/myisam table-space usage\n";
 	print "graph_args --base 1000\n";
 	print "graph_vlabel percent\n";
+	print "graph_category mysql\n";
 	foreach my $t (keys %{$tables})
 	{
 	    	my $label = $t;
