@@ -12,6 +12,9 @@
 #	mysqlopts     - Options to pass to mysql
 #
 # $Log$
+# Revision 1.3  2004/05/20 13:57:12  jimmyo
+# Set categories to some of the plugins.
+#
 # Revision 1.2  2004/04/27 18:58:53  jimmyo
 # Fixed bug in mysql-plugins (Deb#233762).
 #
@@ -54,6 +57,7 @@ if [ "$1" = "config" ]; then
 	echo 'graph_title MySQL slow queries'
 	echo 'graph_args --base 1000 -l 0'
 	echo 'graph_vlabel slow queries / second'
+	echo 'graph_category mysql'
 	echo 'queries.label slow queries'
 	echo 'queries.type COUNTER'
 	echo 'queries.max 500000'
