@@ -13,6 +13,9 @@
 #	mysqlopts    - Options to pass to mysql
 #
 # $Log$
+# Revision 1.2  2004/05/20 13:57:12  jimmyo
+# Set categories to some of the plugins.
+#
 # Revision 1.1  2004/01/02 18:50:00  jimmyo
 # Renamed occurrances of lrrd -> munin
 #
@@ -51,6 +54,7 @@ fi
 if [ "$1" = "config" ]; then
 	echo 'graph_title MySQL threads'
 	echo 'graph_vlabel threads'
+	echo 'graph_category mysql'
 	echo 'threads.label mysql threads'
 	echo 'graph_args --base 1000'
 	exit 0
