@@ -14,6 +14,9 @@
 # 	suggest  (optional - used by munin-config)
 #
 # $Log$
+# Revision 1.3  2004/05/20 13:57:12  jimmyo
+# Set categories to some of the plugins.
+#
 # Revision 1.2  2004/01/29 19:39:00  jimmyo
 # Generic plugins now use printf instead of echo -n, as this is more portable (SF#885564)
 #
@@ -49,6 +52,7 @@ if [ "$1" = "config" ]; then
 
 	echo graph_title Number of processes owned by $name
 	echo 'graph_args --base 1000 --vertical-label processes -l 0'
+	echo 'graph_category processes'
 	echo "count.label $name"
 	echo 'processes.draw LINE2'
 	exit 0
