@@ -16,6 +16,9 @@
 # 	autoconf  (optional - only used by munin-config)
 #
 # $Log$
+# Revision 1.3  2004/05/20 13:57:12  jimmyo
+# Set categories to some of the plugins.
+#
 # Revision 1.2  2004/03/14 11:33:13  auduny
 # Added squidpatch from Jacques Caruso
 #
@@ -159,6 +162,7 @@ if($ARGV[0] and $ARGV[0] eq "config") {
     print "graph_vlabel requests / min\n";
     print "graph_args -l 0 --base 1000\n";
     print "graph_total total\n";
+	print "graph_category squid\n";
     foreach my $i (sort keys %{$hosts}) {
 	print "$i.label ", $hosts->{$i}->{host}, "\n";
 	print "$i.cdef $i,60,*\n";
