@@ -15,6 +15,9 @@
 # 	autoconf  (optional - only used by munin-config)
 #
 # $Log$
+# Revision 1.3  2004/05/20 13:57:12  jimmyo
+# Set categories to some of the plugins.
+#
 # Revision 1.2  2004/03/14 11:33:13  auduny
 # Added squidpatch from Jacques Caruso
 #
@@ -138,6 +141,7 @@ if($ARGV[0] and $ARGV[0] eq "config") {
     print "graph_order hits errors requests\n";
     print "graph_total total\n";
     print "graph_scale no\n";
+	print "graph_category squid\n";
     print "hits.label hits\n";
     print "hits.cdef hits,60,*\n";
     print "hits.type COUNTER\n";
