@@ -15,6 +15,9 @@
 # 	autoconf  (optional - only used by munin-config)
 #
 # $Log$
+# Revision 1.3  2004/05/20 13:57:12  jimmyo
+# Set categories to some of the plugins.
+#
 # Revision 1.2  2004/03/14 11:33:13  auduny
 # Added squidpatch from Jacques Caruso
 #
@@ -138,6 +141,7 @@ if($ARGV[0] and $ARGV[0] eq "config") {
     print "graph_args --base 1000\n";
     print "graph_vlabel bps\n";
     print "graph_order kbytes_in kbytes_out hit_kbytes_out\n";
+	print "graph_category squid\n";
     print "kbytes_in.label received\n";
     print "kbytes_in.cdef kbytes_in,8096,*\n";
     print "kbytes_in.type COUNTER\n";
