@@ -9,6 +9,9 @@
 # 	autoconf (optional - used by munin-config)
 #
 # $Log$
+# Revision 1.4  2004/05/20 13:57:12  jimmyo
+# Set categories to some of the plugins.
+#
 # Revision 1.3  2004/01/30 14:40:08  jimmyo
 # Added max value to generic/vmstat plugin (Deb#225489).
 #
@@ -55,6 +58,7 @@ if [ "$1" = "config" ]; then
 	echo 'graph_title VMstat'
 	echo 'graph_args --base 1000 -l 0'
 	echo 'graph_vlabel process states'
+	echo 'graph_category processes'
 	echo 'wait.label running'
 	echo 'wait.type GAUGE'
 	echo 'wait.max 500000'
